indexcsstyle.css
*{
    margin: 0;
    padding: 0%;
}
body{
    background: var(--background);
}
:root{
    --background: white;
    --second--background: rgb(12, 12, 12);
    --header--background: #96bf96;
    --button--background: #00412e;
    --text--color-black: black;
    --text--color-white: rgb(255, 255, 255);
}
.darkmode{
    background: var(--second--background);
        transition: all var(--second--background) 0.3s ease;
    transition: all var(--text--color-white) 0.3s ease;
    
}
.darkmode span h1{
    color: var(--text--color-white);
}
/*Navbar Link List */
nav {
    position: fixed; /*positioning fixed of navbar*/
    top: 0;
    left: 0;
    width: 100%;
    padding: 10px;
    background: var(--header--background);
    box-shadow: inset 0 0 10px var(--button--background);
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100; /*to navbar above other elements*/
}
.logo{
    font-size: 1.3rem;
    color: var(--text--color-black);
    text-decoration: none;
    font-weight: 600;
}
nav ul{
    justify-content: center;
    display: flex;
    align-items: center;
    flex-wrap: nowrap;
    gap: 1rem;
    left: 0;
}
nav ul li{
    text-align: center;
    text-decoration: none;
    display: block;
}
nav ul li a{
    text-decoration: none;
    color: black;
    font-size: 1.2rem;
    flex: 1;
    cursor: pointer;
    font-family: 'Times New Roman', Times, serif;
    font-weight: 800;
}
nav ul li a:hover{
    background-color: #99e2cc;
    padding: 10px;
    font-size: 18px;
    cursor: pointer;
    transform: scale(1.1);
    transition: all 0.3s ease;
    border-radius: 10px;
}

nav .cart-icon{
    position: relative;
    font-size: 2.5rem;
    right: -300px;
    color: var(--text--color-white);
}
nav .cart-icon .cart-items-count{
    position: absolute;
    top: 0;
    right: 7px;
    width: 2.5rem;
    height: 20px;
    background: #00412e;   
    border-radius: 50%;
    font-size: 12px;
    color: var(--text--color);
    line-height: 20px;
    text-align: center;
    display: none; 
}

/*Home Item */
.home-Items{
    width: 90%;
    height: 100%;
    padding: 2.5rem;
    justify-content: center;
    overflow: hidden;  

}
span h1{
    font-size: 2.5rem;
    padding: 10px;
    width: 20%;
    margin-top: 20px;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: 900;
    flex-grow: 1;
    flex-basis: 200; 
    color: var(--text--color-black);
}
.product-list{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 2.5rem;
    padding: .5rem;
    perspective: 1000px;
}
.flip-card-inner{
    background-color: white;
    position: relative;
    height: 100%;
    width: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}
.flip-card-inner:hover{
    cursor: pointer;
}
.product-list .flip-card-inner:hover {
    transform: rotateY(180deg);
    cursor: pointer;
}
.items .clipcards{
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}
.clipcards{
    transform: rotateY(180deg);
    width: 100%;
}
.product-list .items {
    flex-grow: 4;
    flex-basis: 300px;
    position: relative;
}

.clipcards p{
    color: var(--text--color-black);
    font-size: 16px;
    font-family: 'Times New Roman', Times, serif;
}
.product-list .items1 img{
    width: 100%;
    height: 20%;
    position: relative;
}
/*Shop Item */
.shop-Items{
    width: 90%;
    height: 100%;
    padding: 2.5rem;

}
span h1{
    font-size: 2.5rem;
    padding: 10px;
    width: 100%;
    margin-top: 20px;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: 900;
    color: var(--text--color-black);
    flex-grow: 1;
    flex-basis: 200;
    right: 10px;
}
.mySlides{
    display: none;
    
}
.w3-left, .w3-right, .w3-badge{
    cursor: pointer;
}
.w3-badge{
    width: 13px;
    height: 13px;
    padding: 0;
}

/*Cart Item */
.cart-Items{
    width: 90%;
    height: 100%;
    padding: 2.5rem;
    justify-content: center;
    overflow: hidden;  
}

.cart-Items span{
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
}
span h1{
    font-size: 2.5rem;
    padding: 10px;
    width: 25vw;
    margin-top: 20px;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: 900;
    color: var(--text--color-black);
}
.products{
    width: 100%; 
    display: grid; 
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
    gap: 2.5rem;
}
.card{
    flex-grow: 4; 
    flex-basis: 300px; 
    position: relative;

}
.card img{
    width: 80%;
    position: relative;
    box-shadow: inset 0 0 10px black;
    background-color: white;
    border-radius: 10px;
}
.btn button{
    width: 40%;
    border-radius: 10px;
    margin: 10px;
    padding: 5px;
}
button{
    font-size: 18px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: 300;
    cursor: pointer;
}
button:nth-child(1):hover{
    background: var(--background);
    transition: all 1s ease-in-out;
}
button:nth-child(2):hover{
    background: red;
    transition: all 1s ease-in-out;
}
button:nth-child(3):hover{
    background: yellow;
    transition: all 1s ease-in-out;
    transform: scale(1);
}
.btn input{
    width: 40%;
    height: 100%;
    padding: 10px;
    border-radius: 10px;
    text-align: center;
}
/*Blog */
.blog{
    width: 90%;
    height: 100%;
    padding: 2.5rem;
    justify-content: center;

}
.blog span{
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
}
span h1{
    font-size: 2.5rem;
    padding: 10px;
    width: 25vw;
    margin-top: 20px;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: 900;
    color: var(--text--color-black);
}
.concern{
    display: grid; 
    width: 100%; 
    height: 100%; 
    justify-content: center; 
    align-content: center;
}
form{
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    box-shadow: 10px 10px 10px 10px black;
    width: 100%;
    height: 100%;
    border-radius: 10px;
    padding: 20px;

}
form .details{
    flex: 4; flex-basis: 250px;
}
form .details input, textarea{
    width: 100%; 
    padding: 10px; 
    border-radius: 10px; 
    border: inset 10px 10px 10px whitesmoke;
}

.btn-form{
    background: green;
    padding: 10px;
    width: 50%;
    border-radius: 10px;
    margin: 10px;

}
.btn-form:hover{
    background: white;
}
/*Blog */
.contact{
    width: 90%;
    height: 100%;
    padding: 2.5rem;
    justify-content: center;

}
.contact span{
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
}
span h1{
   font-size: 2.5rem;
    padding: 10px;
    width: 30%;
    margin-top: 20px;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: 900;
    color: var(--text--color-black);
}
/*Sign Up Form */
.register{
    justify-content: center;
    align-content: center;
    display: flex;
    width: 100%;
    height: 100%;
}
input[type=text], input[type=number],input[type=email],input[type=password]{
    width: 90%;
    display: inline-block;
    border: 1px solid #99e2cc;
    box-sizing: border-box;
}
.signup .contianer-btn button{
    background-color: #00412e;
    color: white;
    padding: 10px;
    border-radius: 10px;
    cursor: pointer;
    width: 50%;
    margin: 10px;

}
.signup .contianer-btn button:hover{
    opacity: 0.8;
}
.signup .cancel-btn button{
    padding: 10px;
    background-color: #f44334;
    cursor: pointer;
    width: 50%;
    border-radius: 10px;
    margin: 10px;
}
.detail{
    margin: 10px;
}
.signup{
    display: none;
    position: fixed;
    z-index: 1;
    top: 50px;
    width: 60%;
    height: 80%;
    background-color: rgb(0, 0, 0), rgb(0,0,0.4);
}
.modal{
    background-color: #fefefe;
    margin: 5% auto 15% auto;
    border: 1px solid black;
    width: 50%;

}
.animate{
    -webkit-animation: animationzoom 0.6s;
    animation: animationzoom 0.6s;
}
@-webkit-keyframes animationzoom{
    from{-webkit-transform: scale(0)}
    to{-webkit-transform: scale(1)}
}
@keyframes animationzoom{
    from{-webkit-transform: scale(0)}
    to{-webkit-transform: scale(1)}
}
/*CHATBOT*/
.open-chatbot{
    background: rgb(136, 168, 238);
    color: black;
    padding: 16px 20px;
    border: none;
    cursor: pointer;
    opacity: 0.8;
    position: fixed;
    bottom: 0;
    right: 28px;
    width: 280px;
}
.chat-pop{
    display: none;
    position: fixed;
    bottom: 0;
    right: 15px;
    border: 3px solid #f1f1f1;
    z-index: 9;
    
    
}
.chatbox-contianer{
    max-width: 300px;
    padding: 10px;
    background-color: white;
    height: 50%;
    overflow-y: scroll;
    max-height: 400px;
    
}
.chatbox-contianer textarea{
    width: 100%;
    padding: 5px;
    margin: 15px auto 15px auto;
    border: none;
    background: #f1f1f1;
    resize: none;
    min-height: 10px;
    overflow-y: scroll;
}
.chatbox-contianer .btn-chat{
    padding: 5px;
    width: 100px;
    border-radius: 10px;
    background: #00412e;
    color: white;
    cursor: pointer;
}
.chatbox-contianer .btn-chat:hover{
    background: #3eb491;
}
.chatbox-contianer .btn-chat-cancel{
    background: transparent;
    border: none;
    font-size: 18px;
    left: 20px;
}

.user-message{
    background: rgb(128, 172, 238);
    margin-bottom: 10px;
}
.bot-message{
    background: rgb(161, 245, 234);
    margin-bottom: 10px;
    text-align: right;
}

/*Footer*/
footer{
    min-width: 50rem;
    height: 5%;
    background-color: #3eb491;
}
footer p{
    font-size: 1.1rem;
    letter-spacing: 0.5;
    margin-left: 10px;
    padding: 10px;
}

